--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,14 @@ language: d
 sudo: false
 
 d:
+  - dmd-2.069.0-b1
   - dmd #-2.068.1
-  - dmd-2.067.0
+  - dmd-2.067.1
   - dmd-2.066.1
   - dmd-2.065.0
   - ldc #-0.15.1
   - ldc-0.14.0
-  - ldc-0.16.0-beta1
+  - ldc-0.16.0-beta2
   - gdc #-4.9.3
   - gdc-4.9.0
 
