--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,10 @@ d:
   - dmd-2.067.1
   - dmd-2.066.1
   - dmd-2.065.0
-  - ldc #-0.15.1
+  - ldc-0.17.0-beta1
+  - ldc #-0.16.1
+  - ldc-0.15.1
   - ldc-0.14.0
-  - ldc-0.16.0-beta2
   - gdc #-4.9.3
   - gdc-4.9.0
 
