--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,15 @@ language: d
 sudo: false
 
 d:
-  - dmd #-2.070.0
+  - dmd #-2.070.1
   - dmd-2.069.2
   - dmd-2.068.2
   - dmd-2.067.1
   - dmd-2.066.1
   - dmd-2.065.0
-  - ldc-0.17.0-beta2
-  - ldc #-0.16.1
+  - ldc-1.0.0-alpha1
+  - ldc #-0.17.0
+  - ldc-0.16.1
   - ldc-0.15.1
   - ldc-0.14.0
   - gdc #-4.9.3
