--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,16 @@ language: d
 sudo: false
 
 d:
-  - dmd #-2.070.1
-  - dmd-2.069.2
-  - dmd-2.068.2
-  - dmd-2.067.1
-  - dmd-2.066.1
-  - dmd-2.065.0
-  - ldc-1.0.0-alpha1
-  - ldc #-0.17.0
-  - ldc-0.16.1
-  - ldc-0.15.1
-  - ldc-0.14.0
+  - dmd
+  - dmd-2.078.3
+  - dmd-2.077.1
+  - dmd-2.076.1
+  - dmd-2.075.1
+  - ldc
+  - ldc-1.7.0
+  - ldc-1.6.0
   - gdc #-4.9.3
   - gdc-4.9.0
 
 script:
-  - dub test --compiler=$DC || exit 1
+  - dub build --compiler=$DC || exit 1
